--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "react-syntax-highlighter": "^15.5.0",
         "react-window": "^1.8.7",
         "redux": "^4.2.0",
+        "sass": "^1.55.0",
         "simplebar": "^5.3.8",
         "simplebar-react": "^2.4.1",
         "typescript": "4.8.3",
