--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
         "react-router": "^6.4.1",
         "react-router-dom": "^6.4.1",
         "react-scripts": "^5.0.1",
+        "react-slick": "^0.29.0",
         "react-syntax-highlighter": "^15.5.0",
         "react-window": "^1.8.7",
         "redux": "^4.2.0",
         "sass": "^1.55.0",
         "simplebar": "^5.3.8",
         "simplebar-react": "^2.4.1",
+        "slick-carousel": "^1.8.1",
         "typescript": "4.8.3",
         "web-vitals": "^3.0.2",
         "yup": "^0.32.11"
