--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "react-scripts": "^5.0.1",
         "react-slick": "^0.29.0",
         "react-syntax-highlighter": "^15.5.0",
+        "react-toastify": "^9.1.1",
         "react-window": "^1.8.7",
         "redux": "^4.2.0",
         "sass": "^1.55.0",
